mobile alignment ios fix

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -77,6 +77,7 @@ a {
 /* ===== Global Button Style (Used Outside Music Player) ===== */
 
 button {
+  display: flex;
   margin: 4px;
   border: 4px solid rgb(150, 150, 150);
   border-radius: 10px;
